--- a/index.html
+++ b/index.html
@@ -3,62 +3,19 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Page Lisible Responsive</title>
-  <style>
-    /* Reset de base */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }body {
-  font-family: Arial, sans-serif;
-  line-height: 1.6;
-  color: #333;
-  background-color: #f9f9f9;
-  padding: 20px;
-}
-
-.container {
-  max-width: 800px;
-  margin: auto;
-  background-color: #fff;
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-}
-
-h1, h2 {
-  margin-bottom: 1rem;
-}
-
-p {
-  margin-bottom: 1em;
-  font-size: 1rem;
-}
-
-@media (max-width: 600px) {
-  body {
-    padding: 10px;
-  }
-  .container {
-    padding: 15px;
-  }
-  p {
-    font-size: 1.1rem;
-  }
-}
-
-  </style>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-  <div class="container">
-    <h1>Bienvenue sur notre page</h1>
-    <p>
+<body class="bg-light text-dark py-5">
+  <div class="mx-auto bg-white p-4 p-md-5 rounded shadow-sm" style="max-width: 800px;">
+    <h1 class="mb-4">Bienvenue sur notre page</h1>
+    <p class="mb-4">
       Cette page est conçue pour être facile à lire, quel que soit l'appareil que vous utilisez. Elle s'adapte automatiquement à la taille de l'écran pour offrir une expérience agréable sur mobile comme sur ordinateur.
     </p>
-    <h2>Sous-titre</h2>
+    <h2 class="mb-3">Sous-titre</h2>
     <p>
       Le texte est bien espacé, la largeur de lecture est limitée pour éviter les lignes trop longues, et la taille de la police s'ajuste pour les petits écrans.
     </p>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
