--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Paul Amat Design</title>
+  <title>Page Lisible Responsive</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-  <div>
-    <h1>Bienvenue sur notre page</h1>
-    <p>
+<body class="bg-light text-dark py-5">
+  <div class="mx-auto bg-white p-4 p-md-5 rounded shadow-sm" style="max-width: 800px;">
+    <h1 class="mb-4">Bienvenue sur notre page</h1>
+    <p class="mb-4">
       Cette page est conçue pour être facile à lire, quel que soit l'appareil que vous utilisez. Elle s'adapte automatiquement à la taille de l'écran pour offrir une expérience agréable sur mobile comme sur ordinateur.
     </p>
-    <h2>Sous-titre</h2>
+    <h2 class="mb-3">Sous-titre</h2>
     <p>
       Le texte est bien espacé, la largeur de lecture est limitée pour éviter les lignes trop longues, et la taille de la police s'ajuste pour les petits écrans.
     </p>
