--- a/index.html
+++ b/index.html
@@ -1,20 +1,56 @@
-<!DOCTYPE html><html lang="fr">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Page Lisible Responsive</title>
+  <title>Paul Amat - UX Designer</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light text-dark py-5">
-  <div class="mx-auto bg-white p-4 p-md-5 rounded shadow-sm" style="max-width: 800px;">
-    <h1 class="mb-4">Bienvenue sur notre page</h1>
-    <p class="mb-4">
-      Cette page est conçue pour être facile à lire, quel que soit l'appareil que vous utilisez. Elle s'adapte automatiquement à la taille de l'écran pour offrir une expérience agréable sur mobile comme sur ordinateur.
-    </p>
-    <h2 class="mb-3">Sous-titre</h2>
-    <p>
-      Le texte est bien espacé, la largeur de lecture est limitée pour éviter les lignes trop longues, et la taille de la police s'ajuste pour les petits écrans.
-    </p>
+  <div class="mx-auto px-3 px-md-4" style="max-width: 800px;">
+    <h1 class="mb-3">Hi, I’m Paul Amat</h1>
+    <h2 class="h4 mb-4">Senior UX Designer, Researcher and Data Analyst.</h2><p>Since 7 years I use knowledge from social sciences to create designs that focus on user’s needs and business objectives. I work closely with data analysts and use tools such as R and MAXQDA to uncover insights that inform designs. I work from Paris.</p>
+
+<aside class="bg-warning-subtle border-start border-4 border-warning p-3 my-4 rounded">
+  💡<br>
+  Connect with me on <a href="https://www.linkedin.com/in/paul-amat/" target="_blank">LinkedIn</a> to chat further or explore some of my work below.
+</aside>
+
+<h2 class="mt-5 mb-3">UX Articles</h2>
+
+<h3 class="h5"><a href="https://uxdesign.cc/thirty-hypotheses-on-interface-aesthetics-430ff6d2a666?source=friends_link&sk=9a2b3f9100f3bef8292bd80a463d747a" target="_blank">Thirty hypotheses on interface aesthetics</a></h3>
+<p class="text-muted">(en) uxdesign.cc</p>
+
+<h3 class="h5"><a href="https://uxdesign.cc/emotions-and-micro-expressions-in-ux-research-user-testing-a58b66612de?source=friends_link&sk=cb0bdb18f900ebb23745d63aacd21fe7" target="_blank">Micro-expressions in user testing: when users betray their true emotional states</a></h3>
+<p class="text-muted">(en) uxdesign.cc</p>
+
+<h3 class="h5"><a href="https://uxdesign.cc/design-system-based-on-the-golden-ratio-ui-%C9%B8-e45eb98655cb?source=friends_link&sk=24f9184447ca3c8fdc786a0c49cd5b8d" target="_blank">Rhythm your Design System with golden ratio</a></h3>
+<p class="text-muted">(en) uxdesign.cc</p>
+
+<h2 class="mt-5 mb-3">Data Articles</h2>
+
+<h3 class="h5"><a href="https://uxdesign.cc/how-to-visualize-data-from-ux-standardized-questionnaires-c3354708b2d9?source=friends_link&sk=b328912d2496b2095b0a30cf9370122c" target="_blank">Visualize data from UX standardized questionnaires</a></h3>
+<p class="text-muted">(en) uxdesign.cc</p>
+
+<h3 class="h5"><a href="https://www.data.gouv.fr/fr/reuses/repartition-des-monuments-proteges-par-periode-historique-et-appellation/" target="_blank">Répartition des monuments protégés par période historique et appellation</a></h3>
+<p class="text-muted">(fr) data.gouv.fr</p>
+
+<h2 class="mt-5 mb-3">Certifications</h2>
+
+<h3 class="h5"><a href="https://drive.google.com/file/d/17Ns4gxGW0BY1meAhQNQKXXwgdlRdgeGK/view?usp=sharing" target="_blank">Data Analyst</a></h3>
+<p class="text-muted">DataCamp, 2025</p>
+
+<h3 class="h5"><a href="https://drive.google.com/file/d/1d6hF-TRedJdvCBCrz-nm41HFKC-TkVAJ/view?usp=sharing" target="_blank">Accessibilité Numérique</a></h3>
+<p class="text-muted">Access42, 2023</p>
+
+<h3 class="h5"><a href="https://drive.google.com/file/d/1ccKZPos-Zp1Yjd_BdZq8BkXOYqfFJYeA/view?usp=sharing" target="_blank">Qualitative Research Design and Methods</a></h3>
+<p class="text-muted">Coursera, 2023</p>
+
+<h3 class="h5"><a href="https://drive.google.com/file/d/1w3uRx5BwFUT8-EM-1N1WTEL6M_Kwnlzk/view?usp=sharing" target="_blank">Gamification</a></h3>
+<p class="text-muted">Coursera, 2023</p>
+
+<h3 class="h5"><a href="https://drive.google.com/file/d/1g0r8QqBtXJlqkmMYr85uzkcx20FWEeGh/view?usp=sharing" target="_blank">Micro-Expressions</a></h3>
+<p class="text-muted">Paul Ekman Group, 2021</p>
+
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
