--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body class="bg-light text-dark py-5">
   <div class="mx-auto px-3 px-md-4" style="max-width: 800px;">
-    <h1 class="mb-3">Hi, I’m Paul Amat</h1>
+    <h1 class="mb-3">Hi, I am Paul Amat</h1>
     <h2 class="h4 mb-4">Senior UX Designer, Researcher and Data Analyst.</h2><p>Since 7 years I use knowledge from social sciences to create designs that focus on user’s needs and business objectives. I work closely with data analysts and use tools such as R and MAXQDA to uncover insights that inform designs. I work from Paris.</p>
 
 <aside class="bg-warning-subtle border-start border-4 border-warning p-3 my-4 rounded">
