--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 <body class="bg-light text-dark py-5">
   <div class="mx-auto px-3 px-md-4" style="max-width: 800px;">
     <h1 class="mb-3">Hi, I am Paul Amat</h1>
-    <h2 class="h4 mb-4">Senior UX Designer, Researcher and Data Analyst.</h2><p>Since 7 years I use knowledge from social sciences to create designs that focus on user’s needs and business objectives. I work closely with data analysts and use tools such as R and MAXQDA to uncover insights that inform designs. I work from Paris.</p>
+    <p class="lead">
+      Senior UX Designer, Researcher and Data Analyst.</h2><p>Since 7 years I use knowledge from social sciences to create designs that focus on user’s needs and business objectives. I work closely with data analysts and use tools such as R and MAXQDA to uncover insights that inform designs. I work from Paris.
+      </p>
 
-<aside class="bg-warning-subtle border-start border-4 border-warning p-3 my-4 rounded">
-  💡<br>
+<p>
   Connect with me on <a href="https://www.linkedin.com/in/paul-amat/" target="_blank">LinkedIn</a> to chat further or explore some of my work below.
-</aside>
+</p>
 
 <h2 class="mt-5 mb-3">UX Articles</h2>
 
@@ -36,8 +37,21 @@
 
 <h2 class="mt-5 mb-3">Certifications</h2>
 
-<h3 class="h5"><a href="https://drive.google.com/file/d/17Ns4gxGW0BY1meAhQNQKXXwgdlRdgeGK/view?usp=sharing" target="_blank">Data Analyst</a></h3>
-<p class="text-muted">DataCamp, 2025</p>
+<ul class="list-unstyled">
+  <li>
+    <h3 class="h5">Data Analyst</h3>
+    <span class="text-muted">
+      DataCamp, 2025,  
+      <a class="text-muted" href="https://drive.google.com/file/d/17Ns4gxGW0BY1meAhQNQKXXwgdlRdgeGK/view?usp=sharing" target="_blank">
+        Link
+      </a>
+      .
+    </span>
+  </li>
+</ul>
+
+<h3 class="h5"></h3>
+<p class="text-muted"></p>
 
 <h3 class="h5"><a href="https://drive.google.com/file/d/1d6hF-TRedJdvCBCrz-nm41HFKC-TkVAJ/view?usp=sharing" target="_blank">Accessibilité Numérique</a></h3>
 <p class="text-muted">Access42, 2023</p>
