--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ radial-gradient(at 24% 100%, hsla(3,100%,97%,1) 0px, transparent 50%);
   </style>
 </head>
 
-<body class="bg-light text-dark py-5">
+<body class="py-5">
   <div class="mx-auto px-3 px-md-4" style="max-width: 800px;">
     <h1 class="mb-3">Hi, I am Paul Amat</h1>
 
