--- a/index.html
+++ b/index.html
@@ -6,12 +6,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Paul Amat - UX Designer</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300..400&display=swap" rel="stylesheet">
+
   <style>
     body {
 background-color:hsla(0,0%,100%,1);
 background-image:
 radial-gradient(at 83% 100%, hsla(218,100%,94%,1) 0px, transparent 50%),
 radial-gradient(at 24% 100%, hsla(3,100%,97%,1) 0px, transparent 50%);
+
+font-family: "Rubik", sans-serif;
+font-weight: 300;
+
+    }
+
+    h1, h2, h3, h4, h5, h6 {
+      font-weight: 400;
     }
   </style>
 </head>
