--- a/index.html
+++ b/index.html
@@ -29,28 +29,35 @@ font-weight: 300;
 </head>
 
 <body class="py-5">
+
   <div class="mx-auto px-3 px-md-4" style="max-width: 800px;">
-    <h1 class="mb-3">Hi, I am Paul Amat</h1>
+
+    <h1 class="mb-3">
+      Hi, I am Paul Amat
+    </h1>
 
     <p class="lead">
-      Senior UX Designer, Researcher and Data Analyst.</h2>
-    <p>Since 7 years I use knowledge from social sciences to create designs that focus on user’s needs and business
+      Senior UX Designer, Researcher and Data Analyst.
+    </p>
+
+    <p>
+      Since 7 years I use knowledge from social sciences to create designs that focus on user’s needs and business
       objectives. I work closely with data analysts and use tools such as R and MAXQDA to uncover insights that inform
       designs. I work from Paris.
     </p>
 
     <p>
-      Connect with me on <a href="https://www.linkedin.com/in/paul-amat/" target="_blank">LinkedIn</a> to chat further
-      or explore some of my work below.
+      <a href="https://www.linkedin.com/in/paul-amat/" class="btn btn-outline-primary">LinkedIn</a>
     </p>
 
-    <h2 class="mt-5 mb-3">UX Articles</h2>
+    <h2 class="mt-5 mb-3">
+      UX Articles
+    </h2>
 
     <dl>
 
       <dt>
-        <a href="https://uxdesign.cc/thirty-hypotheses-on-interface-aesthetics-430ff6d2a666?source=friends_link&sk=9a2b3f9100f3bef8292bd80a463d747a"
-          target="_blank">
+        <a href="https://uxdesign.cc/thirty-hypotheses-on-interface-aesthetics-430ff6d2a666?source=friends_link&sk=9a2b3f9100f3bef8292bd80a463d747a" target="_blank">
           Thirty hypotheses on interface aesthetics
         </a>
       </dt>
@@ -59,8 +66,7 @@ font-weight: 300;
       </dd>
 
       <dt>
-        <a href="https://uxdesign.cc/emotions-and-micro-expressions-in-ux-research-user-testing-a58b66612de?source=friends_link&sk=cb0bdb18f900ebb23745d63aacd21fe7"
-          target="_blank">
+        <a href="https://uxdesign.cc/emotions-and-micro-expressions-in-ux-research-user-testing-a58b66612de?source=friends_link&sk=cb0bdb18f900ebb23745d63aacd21fe7" target="_blank">
           Micro-expressions in user testing: when users betray their true emotional states
         </a>
       </dt>
@@ -69,8 +75,7 @@ font-weight: 300;
       </dd>
 
       <dt>
-        <a href="https://uxdesign.cc/design-system-based-on-the-golden-ratio-ui-%C9%B8-e45eb98655cb?source=friends_link&sk=24f9184447ca3c8fdc786a0c49cd5b8d"
-          target="_blank">
+        <a href="https://uxdesign.cc/design-system-based-on-the-golden-ratio-ui-%C9%B8-e45eb98655cb?source=friends_link&sk=24f9184447ca3c8fdc786a0c49cd5b8d" target="_blank">
           Rhythm your Design System with golden ratio
         </a>
       </dt>
@@ -85,8 +90,7 @@ font-weight: 300;
     <dl>
 
       <dt>
-        <a href="https://uxdesign.cc/how-to-visualize-data-from-ux-standardized-questionnaires-c3354708b2d9?source=friends_link&sk=b328912d2496b2095b0a30cf9370122c"
-          target="_blank">
+        <a href="https://uxdesign.cc/how-to-visualize-data-from-ux-standardized-questionnaires-c3354708b2d9?source=friends_link&sk=b328912d2496b2095b0a30cf9370122c" target="_blank">
           Visualize data from UX standardized questionnaires
         </a>
       </dt>
@@ -95,8 +99,7 @@ font-weight: 300;
       </dd>
 
       <dt>
-        <a href="https://www.data.gouv.fr/fr/reuses/repartition-des-monuments-proteges-par-periode-historique-et-appellation/"
-          target="_blank">
+        <a href="https://www.data.gouv.fr/fr/reuses/repartition-des-monuments-proteges-par-periode-historique-et-appellation/" target="_blank">
           Répartition des monuments protégés par période historique et appellation
         </a>
       </dt>
@@ -109,20 +112,40 @@ font-weight: 300;
     <h2 class="mt-5 mb-3">Certifications</h2>
 
     <dl>
-      <dt>Data Analyst</dt>
-      <dd class="text-muted">DataCamp (2025)</dd>
+      <dt>
+        Data Analyst
+      </dt>
+      <dd class="text-muted">
+        DataCamp (2025)
+      </dd>
 
-      <dt>Accessibilité Numérique</dt>
-      <dd class="text-muted">Access42 (2023)</dd>
+      <dt>
+        Accessibilité Numérique
+      </dt>
+      <dd class="text-muted">
+        Access42 (2023)
+      </dd>
 
-      <dt>Qualitative Research Design and Methods</dt>
-      <dd class="text-muted">Coursera (2023)</dd>
+      <dt>
+        Qualitative Research Design and Methods
+      </dt>
+      <dd class="text-muted">
+        Coursera (2023)
+      </dd>
 
-      <dt>Gamification</dt>
-      <dd class="text-muted">Coursera (2023)</dd>
+      <dt>
+        Gamification
+      </dt>
+      <dd class="text-muted">
+        Coursera (2023)
+      </dd>
 
-      <dt>Micro-Expressions</dt>
-      <dd class="text-muted">Paul Ekman Group (2021)</dd>
+      <dt>
+        Micro-Expressions
+      </dt>
+      <dd class="text-muted">
+        Paul Ekman Group (2021)
+      </dd>
     </dl>
 
   </div>
