--- a/index.html
+++ b/index.html
@@ -6,23 +6,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Paul Amat - UX Designer</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300..500&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300..500&display=swap" rel="stylesheet">
 
   <style>
     body {
-background-color:hsla(0,0%,100%,1);
-background-image:
-radial-gradient(at 83% 100%, hsla(218,100%,94%,1) 0px, transparent 50%),
-radial-gradient(at 24% 100%, hsla(3,100%,97%,1) 0px, transparent 50%);
+      background-color: hsla(0, 100%, 98%, 1);
+      background-image:
+        radial-gradient(at 54% 37%, hsla(250, 100%, 99%, 1) 0px, transparent 50%),
+        radial-gradient(at 37% 97%, hsla(0, 100%, 92%, 1) 0px, transparent 50%),
+        radial-gradient(at 2% 60%, hsla(10, 100%, 95%, 1) 0px, transparent 50%),
+        radial-gradient(at 98% 34%, hsla(340, 97%, 94%, 1) 0px, transparent 50%),
+        radial-gradient(at 85% 37%, hsla(165, 100%, 80%, 1) 0px, transparent 50%),
+        radial-gradient(at 82% 58%, hsla(75, 100%, 95%, 1) 0px, transparent 50%),
+        radial-gradient(at 31% 25%, hsla(50, 100%, 96%, 1) 0px, transparent 50%);
 
-font-family: "Rubik", sans-serif;
-font-weight: 300;
+      font-family: "Rubik", sans-serif;
+      font-weight: 300;
 
     }
 
-    h1, h2, h3, h4, h5, h6 {
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
       font-weight: 410;
     }
   </style>
@@ -57,7 +67,8 @@ font-weight: 300;
     <dl>
 
       <dt>
-        <a href="https://uxdesign.cc/thirty-hypotheses-on-interface-aesthetics-430ff6d2a666?source=friends_link&sk=9a2b3f9100f3bef8292bd80a463d747a" target="_blank">
+        <a href="https://uxdesign.cc/thirty-hypotheses-on-interface-aesthetics-430ff6d2a666?source=friends_link&sk=9a2b3f9100f3bef8292bd80a463d747a"
+          target="_blank">
           Thirty hypotheses on interface aesthetics
         </a>
       </dt>
@@ -66,7 +77,8 @@ font-weight: 300;
       </dd>
 
       <dt>
-        <a href="https://uxdesign.cc/emotions-and-micro-expressions-in-ux-research-user-testing-a58b66612de?source=friends_link&sk=cb0bdb18f900ebb23745d63aacd21fe7" target="_blank">
+        <a href="https://uxdesign.cc/emotions-and-micro-expressions-in-ux-research-user-testing-a58b66612de?source=friends_link&sk=cb0bdb18f900ebb23745d63aacd21fe7"
+          target="_blank">
           Micro-expressions in user testing: when users betray their true emotional states
         </a>
       </dt>
@@ -75,7 +87,8 @@ font-weight: 300;
       </dd>
 
       <dt>
-        <a href="https://uxdesign.cc/design-system-based-on-the-golden-ratio-ui-%C9%B8-e45eb98655cb?source=friends_link&sk=24f9184447ca3c8fdc786a0c49cd5b8d" target="_blank">
+        <a href="https://uxdesign.cc/design-system-based-on-the-golden-ratio-ui-%C9%B8-e45eb98655cb?source=friends_link&sk=24f9184447ca3c8fdc786a0c49cd5b8d"
+          target="_blank">
           Rhythm your Design System with golden ratio
         </a>
       </dt>
@@ -90,7 +103,8 @@ font-weight: 300;
     <dl>
 
       <dt>
-        <a href="https://uxdesign.cc/how-to-visualize-data-from-ux-standardized-questionnaires-c3354708b2d9?source=friends_link&sk=b328912d2496b2095b0a30cf9370122c" target="_blank">
+        <a href="https://uxdesign.cc/how-to-visualize-data-from-ux-standardized-questionnaires-c3354708b2d9?source=friends_link&sk=b328912d2496b2095b0a30cf9370122c"
+          target="_blank">
           Visualize data from UX standardized questionnaires
         </a>
       </dt>
@@ -99,7 +113,8 @@ font-weight: 300;
       </dd>
 
       <dt>
-        <a href="https://www.data.gouv.fr/fr/reuses/repartition-des-monuments-proteges-par-periode-historique-et-appellation/" target="_blank">
+        <a href="https://www.data.gouv.fr/fr/reuses/repartition-des-monuments-proteges-par-periode-historique-et-appellation/"
+          target="_blank">
           Répartition des monuments protégés par période historique et appellation
         </a>
       </dt>
