--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 
   <style>
     body {
-      background-color: hsla(0, 100%, 98%, 1);
+      background-color: hsla(0, 100%, 98%, 0.5);
       background-image:
-        radial-gradient(at 54% 37%, hsla(250, 100%, 99%, 1) 0px, transparent 50%),
-        radial-gradient(at 37% 97%, hsla(0, 100%, 92%, 1) 0px, transparent 50%),
-        radial-gradient(at 2% 60%, hsla(10, 100%, 95%, 1) 0px, transparent 50%),
-        radial-gradient(at 98% 34%, hsla(340, 97%, 94%, 1) 0px, transparent 50%),
-        radial-gradient(at 85% 37%, hsla(165, 100%, 80%, 1) 0px, transparent 50%),
-        radial-gradient(at 82% 58%, hsla(75, 100%, 95%, 1) 0px, transparent 50%),
-        radial-gradient(at 31% 25%, hsla(50, 100%, 96%, 1) 0px, transparent 50%);
+        radial-gradient(at 54% 37%, hsla(250, 100%, 99%, 1) 0px, transparent 25%),
+        radial-gradient(at 37% 97%, hsla(0, 100%, 92%, 1) 0px, transparent 25%),
+        radial-gradient(at 2% 60%, hsla(10, 100%, 95%, 1) 0px, transparent 25%),
+        radial-gradient(at 98% 34%, hsla(340, 97%, 94%, 1) 0px, transparent 25%),
+        radial-gradient(at 85% 37%, rgb(218, 255, 246) 0px, transparent 25%),
+        radial-gradient(at 82% 58%, hsla(75, 100%, 95%, 1) 0px, transparent 25%),
+        radial-gradient(at 31% 25%, hsla(50, 100%, 96%, 1) 0px, transparent 25%);
 
       font-family: "Rubik", sans-serif;
       font-weight: 300;
