--- a/index.html
+++ b/index.html
@@ -12,15 +12,8 @@
 
   <style>
     body {
-      background-color: hsla(0, 100%, 98%, 0.5);
-      background-image:
-        radial-gradient(at 54% 37%, hsla(250, 100%, 99%, 1) 0px, transparent 25%),
-        radial-gradient(at 37% 97%, hsla(0, 100%, 92%, 1) 0px, transparent 25%),
-        radial-gradient(at 2% 60%, hsla(10, 100%, 95%, 1) 0px, transparent 25%),
-        radial-gradient(at 98% 34%, hsla(340, 97%, 94%, 1) 0px, transparent 25%),
-        radial-gradient(at 85% 37%, rgb(218, 255, 246) 0px, transparent 25%),
-        radial-gradient(at 82% 58%, hsla(75, 100%, 95%, 1) 0px, transparent 25%),
-        radial-gradient(at 31% 25%, hsla(50, 100%, 96%, 1) 0px, transparent 25%);
+      background-color: hsla(0, 100%, 98%, 1);
+      background-image: linear-gradient(0deg, rgb(255, 236, 197), transparent);
 
       font-family: "Rubik", sans-serif;
       font-weight: 300;
@@ -40,7 +33,7 @@
 
 <body class="py-5">
 
-  <div class="mx-auto px-3 px-md-4" style="max-width: 800px;">
+  <div class="mx-auto px-3 px-md-4 my-5" style="max-width: 800px;">
 
     <h1 class="mb-3">
       Hi, I am Paul Amat
