--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <body class="py-5">
 
-  <div class="mx-auto px-3 px-md-4 my-5" style="max-width: 800px;">
+  <div class="mx-auto px-3 px-md-4" style="max-width: 800px;">
 
     <h1 class="mb-3">
       Hi, I am Paul Amat
