--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     h6 {
       font-weight: 410;
     }
+
   </style>
 </head>
 
@@ -49,9 +50,40 @@
       designs. I work from Paris.
     </p>
 
-    <p>
-      <a href="https://www.linkedin.com/in/paul-amat/" class="btn btn-outline-primary">LinkedIn</a>
-    </p>
+    <div class="container text-center my-5">
+      <div class="row align-items-start">
+        <div class="col">
+          <dl>
+            <dt class="display-4 text-border">
+              💡
+            </dt>
+            <dd class="small text-muted">
+              <mark><strong>UX Design</strong></mark>
+            </dd>
+          </dl>
+        </div>
+        <div class="col">
+          <dl>
+            <dt class="display-4 text-border">
+              🧠
+            </dt>
+            <dd>
+              <mark><strong>Research</strong></mark>
+            </dd>
+          </dl>
+        </div>
+        <div class="col">
+          <dl>
+            <dt class="display-4 text-border">
+              🔍
+            </dt>
+            <dd>
+              <mark><strong>Data Analysis</strong></mark>
+            </dd>
+          </dl>
+        </div>
+      </div>
+    </div>
 
     <h2 class="mt-5 mb-3">
       UX Articles
@@ -155,6 +187,10 @@
         Paul Ekman Group (2021)
       </dd>
     </dl>
+    
+    <p class="my-5 pt-5 d-flex justify-content-center" style="border-top: 1px solid rgba(0, 0, 0, 0.1);">
+      <a href="https://www.linkedin.com/in/paul-amat/" class="btn btn-outline-primary">LinkedIn</a>
+    </p>
 
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
