--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="row align-items-start">
         <div class="col">
           <dl>
-            <dt class="display-4 text-border">
+            <dt class="display-4 mb-1">
               💡
             </dt>
             <dd class="small text-muted">
@@ -64,7 +64,7 @@
         </div>
         <div class="col">
           <dl>
-            <dt class="display-4 text-border">
+            <dt class="display-4 mb-1">
               🧠
             </dt>
             <dd>
@@ -74,11 +74,11 @@
         </div>
         <div class="col">
           <dl>
-            <dt class="display-4 text-border">
+            <dt class="display-4 mb-1">
               🔍
             </dt>
             <dd>
-              <mark><strong>Data Analysis</strong></mark>
+              <mark><strong>Data</strong></mark>
             </dd>
           </dl>
         </div>
