--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
     </p>
 
     <p>
-      Since 7 years I use knowledge from social sciences to create designs that focus on user’s needs and business
-      objectives. I work closely with data analysts and use tools such as R and MAXQDA to uncover insights that inform
-      designs. I work from Paris.
+      For the past seven years, I’ve been applying insights from the social sciences to create user-centered designs that balance user needs with business goals. I work closely with data analysts and use tools like R and MAXQDA to uncover meaningful patterns and behavioral insights that inform my design process. I’m currently based in Paris, France.
     </p>
 
     <div class="container text-center my-5">
@@ -148,6 +146,8 @@
       </dd>
 
     </dl>
+
+    <h2 class="mt-5 mb-3">I worked with them</h2>
 
     <h2 class="mt-5 mb-3">Certifications</h2>
 
