--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
   <style>
     body {
-      background-color: hsla(0, 100%, 98%, 1);
-      background-image: linear-gradient(0deg, rgb(255, 236, 197), transparent);
+      background-color: rgb(254, 245, 240);
+      background-image: linear-gradient(0deg, rgb(255, 244, 222), transparent);
 
       font-family: "Rubik", sans-serif;
       font-weight: 300;
